feat: add commands section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="/images/oneone.png" alt="OneOne logo" width="40px">
         </a>
         <nav class="header__nav">
-          <a href="#utilities">Utilidades</a>
+          <a href="#commands">Comandos</a>
           <a href="#server">Servidor</a>
           <button id="toggleColor">
             🌗
@@ -53,11 +53,54 @@
       <section class="section" id="commands">
         <h2>Comandos</h2>
         <div class="commands">
-          <ul class="command-selection">
-            <li id="command-item commands-info">Información</li>
-            <li id="command-item commands-dev">Para developers</li>
-            <li id="command-item commands-bot">Bot</li>
-          </ul>
+          <article class="command-item">
+            <div class="command-item__title">
+              <span>Información</span>
+              <span class="command-item__arrow">👉</span>
+            </div>
+            <div class="command-item__content">
+              <ul>
+                <li>
+                  <span>currency</span>
+                  <p>Muestra el cambio de una moneda con respecto al dólar y viceversa.</p>
+                </li>
+                <li>
+                  <span>show</span>
+                  <p>Muestra la información de un show o película.</p>
+                </li>
+              </ul>
+            </div>
+          </article>
+          
+          <article class="command-item">
+            <div class="command-item__title">
+              <span>Para Developers</span>
+              <span class="command-item__arrow">👉</span>
+            </div>
+            <div class="command-item__content">
+              <ul>
+                <li>
+                  <span>npm</span>
+                  <p>Muestra información de un paquete de npm.</p>
+                </li>
+              </ul>
+            </div>
+          </article>
+
+          <article class="command-item">
+            <div class="command-item__title">
+              <span>Bot</span>
+              <span class="command-item__arrow">👉</span>
+            </div>
+            <div class="command-item__content">
+              <ul>
+                <li>
+                  <span>ping</span>
+                  <p>Muestra la velocidad de respuesta del bot.</p>
+                </li>
+              </ul>
+            </div>
+          </article>
         </div>
       </section>
       
