feat: add footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <header>
-      <div class="header__container">
+      <div class="container header__container">
         <a href="#" class="header__image">
           <img src="/images/oneone.png" alt="OneOne logo" width="40px">
         </a>
@@ -118,54 +118,17 @@
     </main>
 
     <footer>
-      <div class="footer__container">
+      <div class="container">
         <section class="footer__brand">
           <div class="footer__brand__title">
             <img src="/images/oneone.png" alt="OneOne logo" width="40px"><h3>OneOne Bot</h3>
           </div>
-          <h5>© 2021 <a href="https://doulovera.vercel.app/">Douglas Lovera</a></h5>
+          <a href="https://doulovera.vercel.app/" target="_blank" rel="noreferrer noopener">Douglas Lovera</a>
         </section>
-        <section class="footer__lists">
-          <div class="footer__lists_list">
-            <h5>Links</h5>
-            <ul>
-              <li>
-                <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8">
-                  Invitar bot
-                </a>
-              </li>
-              <li>
-                <a href="https://discord.gg/Pc7CtmgUk2">
-                  Servidor
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/doulovera/oneone-web">
-                  Web Source
-                </a>
-              </li>
-              <li>
-                <a href="https://discord.js.org/" target="_blank" rel="noreferrer">
-                  Discord.js
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer__lists_list">
-            <h5>Personas</h5>
-            <ul>
-              <li>
-                <a href="https://doulovera.vercel.app/" target="_blank" rel="noreferrer">
-                  DouLo#0763 (Creator)
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/akachrosto" target="_blank" rel="noreferrer">
-                  Chrosto#5009 (Collaborator)
-                </a>
-              </li>
-            </ul>
-          </div>
+        <section class="footer__brand__links">
+          <a href="https://github.com/doulovera/oneone-web" target="_blank" rel="noreferrer noopener">Código</a> ·
+          <a href="https://discord.js.org/" target="_blank" rel="noreferrer noopener">Discord.js</a> ·
+          <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8" target="_blank" rel="noreferrer noopener">Invitar bot</a>
         </section>
       </div>
     </footer>
