fix: change portfolio href

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="footer__brand__title">
             <img src="/images/oneone.png" alt="OneOne logo" width="40px"><h3>OneOne Bot</h3>
           </div>
-          <a href="https://doulovera.vercel.app/" target="_blank" rel="noreferrer noopener">Douglas Lovera</a>
+          <a href="https://doulovera.com/" target="_blank" rel="noreferrer noopener">Douglas Lovera</a>
         </section>
         <section class="footer__brand__links">
           <a href="https://github.com/doulovera/oneone-web" target="_blank" rel="noreferrer noopener">Código</a> ·
